--- a/code/asset/css/world.css
+++ b/code/asset/css/world.css
@@ -5,3 +5,26 @@
 	height: 100vh;
 	display: block;
 }
+
+#chat_system{
+	position: absolute;
+	left: 0;
+	bottom:0;
+	background-color: white;
+	opacity: 0.5;
+}
+
+#chat_window{
+	width: 40vw;
+	height: 20vh;
+}
+
+#chat_input{
+	width: calc(40vw - 50px);
+	border: 1px solid;
+	padding: 1px;
+}
+
+#chat_send_button{
+	width: 50px;
+}
